changed names on messageBox components in FormApp, added inline style to messageBox component to overried the whitespace class applied to the placeholder attribute breaking the autosize, removed Label component from FormApp as it is no longer needed

--- a/src/less/forms.less
+++ b/src/less/forms.less
@@ -220,38 +220,6 @@ input[type='checkbox']:focus {
 
 
 // -------------------------
-// Form Asterisk (for required fields)
-// -------------------------
-
-
-.form__asterisk {
-  color: @color-danger;
-}
-
-
-// -------------------------
-// Form Clear
-// -------------------------
-
-
-.form__clear {
-  align-items: center;
-  display: flex;
-  position: relative;
-}
-
-.form__clear__btn {
-  background: @color-gray-light;
-  border-radius: 50%;
-  color: @color-white;
-  font-size: 1.2rem;
-  padding: .2rem;
-  position: absolute;
-  right: 1rem;
-}
-
-
-// -------------------------
 // Form Control
 // -------------------------
 
@@ -286,7 +254,7 @@ input[type='checkbox']:focus {
   border: 1px solid @input-border;
   color: @input-color;
   display: flex;
-  transition: border-color .15s @trans-timing-cubic, box-shadow .15s @trans-timing-cubic;
+  transition: border-color @trans-timing-cubic .15s, box-shadow @trans-timing-cubic .15s;
   width: 100%;
 
   // hide IE clear on inputs
@@ -299,7 +267,7 @@ input[type='checkbox']:focus {
     display: none;
   }
 
-  .mixin-input-size(@input-height-base; @input-padding-base; @font-size-base; @input-border-radius);
+  .mixin-input-size(@input-height-base; @padding-base; @font-size-base; @input-border-radius);
 
   &:focus {
     .mixin-tab-focus();
@@ -332,21 +300,31 @@ input[type='checkbox']:focus {
 
 // form controls that need right padding to account for chevron-down
 .form__control--chevron {
-  padding-right: @form-control-chevron-padding !important;
+  padding-right: @form-control-chevron-padding;
 }
 
-// form controls that need right padding to account for clear button
-.form__control--clear {
-  padding-right: @form-control-clear-padding !important;
+
+/*.form__control--sm {
+  .mixin-input-size(@input-height-small; @padding-base; @font-size-small; @input-border-radius-small);
 }
 
-// form controls that are stripped down in appearance
-.form__control--naked {
-  background: transparent;
-  border: 0;
-  padding: 0;
-  padding-right: initial;
+.form__control--lg {
+  .mixin-input-size(@input-height-large; @padding-xlarge; @font-size-large; @input-border-radius-large);
 }
+
+// Apply class to a `p` element to make any string of text align with labels in
+// a horizontal form layout.
+
+.form__control--static {
+  margin-bottom: 0;
+  min-height: @input-height-base;
+
+  &.form__control--lg,
+  &.form__control--sm {
+    padding-left: 0;
+    padding-right: 0;
+  }
+}*/
 
 
 // -------------------------
@@ -363,12 +341,13 @@ input[type='checkbox']:focus {
 
 
 // -------------------------
-// Form Section
+// Form Optional
 // -------------------------
 
 
-.form__section:not(:last-child) {
-  margin-bottom: (@spacer-y * 3);
+.form__optional {
+  color: @color-secondary;
+  font-weight: normal;
 }
 
 
@@ -416,17 +395,16 @@ input[type='checkbox'] {
 .rhinobox,
 .rhinodio {
   display: block;
-  margin: @rhinobox-rhinodio-margin 0;
+  margin-bottom: @margin-small;
+  margin-top: @margin-small;
   position: relative;
 
   label {
-    color: inherit;
     cursor: pointer;
+    //display: inline;
     font-weight: normal;
     margin-bottom: 0;
     min-height: @line-height-computed; // Ensure the input doesn't jump when there is no text
-    padding-left: 2.6rem;
-    position: relative;
     user-select: none;
   }
 
@@ -457,6 +435,8 @@ input[type='checkbox'] {
   }
 
   label {
+    align-items: center;
+    display: flex;
 
     &::before {
       background-color: @color-white;
@@ -464,12 +444,11 @@ input[type='checkbox'] {
       content: '';
       display: inline-block;
       height: 2rem;
-      left: 0;
       line-height: 1.3rem;
+      margin-right: @margin-small;
       padding: 0;
-      position: absolute;
+      position: relative;
       speak: none;
-      top: .1rem;
       transition: background-color 250ms @trans-timing-cubic;
       width: 2rem;
     }
@@ -490,6 +469,8 @@ input[type='checkbox'] {
   }
 
   label {
+    align-items: center;
+    display: flex;
 
     &::before {
       background: @color-white;
@@ -499,10 +480,7 @@ input[type='checkbox'] {
       content: '';
       display: inline-block;
       height: 2rem;
-      left: 0;
-      position: absolute;
-      speak: none;
-      top: .1rem;
+      margin-right: @margin-small;
       transition: background-color 250ms @trans-timing-cubic;
       width: 2rem;
     }
@@ -512,7 +490,7 @@ input[type='checkbox'] {
 .rhinobox--inline,
 .rhinodio--inline {
   display: inline-block;
-  margin: (@rhinobox-rhinodio-margin / 2) @margin-half-gutter (@rhinobox-rhinodio-margin / 2) 0;
+  margin-right: @margin-large;
 }
 
 
@@ -710,6 +688,3 @@ input[type='checkbox'] {
   width: @switcher-toggler-width;
   z-index: 10;
 }
-
-
-
